# fintuna

./: .gitignore  MANIFEST.in  README.md  README.rst  Sphinx Task.run.xml  pyproject.toml  requirements.txt  setup.py
docs/: .buildinfo  api.html  concept.html  examples.html  genindex.html  index.html  intro.html  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: api.doctree  concept.doctree  environment.pickle  examples.doctree  index.doctree  intro.doctree
docs/.doctrees/_autosummary/: fintuna.FinStudy.doctree  fintuna.model.LongOnly.doctree  fintuna.model.ModelBase.doctree  fintuna.model.Pumps.doctree  fintuna.model.doctree  fintuna.run.doctree  fintuna.sink.LogSink.doctree  fintuna.sink.doctree  fintuna.utils.doctree
docs/.doctrees/examples/: crypto_longonly.doctree  crypto_pumps.doctree  end2end_crypto_longonly.doctree
docs/_autosummary/: fintuna.FinStudy.html  fintuna.model.LongOnly.html  fintuna.model.ModelBase.html  fintuna.model.Pumps.html  fintuna.model.html  fintuna.run.html  fintuna.sink.LogSink.html  fintuna.sink.html  fintuna.utils.html
docs/_sources/: api.rst.txt  examples.rst.txt  index.rst.txt  intro.rst.txt
docs/_sources/_autosummary/: fintuna.model.LongOnly.rst.txt  fintuna.model.rst.txt  fintuna.sink.rst.txt  fintuna.utils.rst.txt
docs/examples/: crypto_longonly.html  crypto_pumps.html  end2end_crypto_longonly.html
docs/jupyter_execute/examples/: crypto_longonly.ipynb  crypto_prediction.ipynb  crypto_pumps.ipynb  end2end_crypto_prediction.ipynb
docs/source/: api.rst  concept.rst  conf.py  examples.rst  index.rst  intro.rst  usage.rst
docs/source/_templates/autosummary/: class.rst
docs/source/examples/: crypto_longonly.ipynb  crypto_pumps.ipynb  end2end_crypto_longonly.ipynb
examples/: crypto_pumps_prediction.py  end2end_crypto_prediction.py  long_only_stocks.py  pumps_crypto.py
fintuna/: __init__.py  finstudy.py  requirements.txt  run.py
fintuna/data/: btcpairs_with_social_sentiment.json  crypto_features.h5  data.py
fintuna/ensemble/: BaseEnsemble.py  IndividualEnsemble.py  MajorityVoteEnsemble.py  MeanEnsemble.py  __init__.py
fintuna/model/: LongOnly.py  ModelBase.py  Pumps.py  __init__.py
fintuna/sink/: LogSink.py  __init__.py
fintuna/utils/: __init__.py  utils.py
